i18n for neopets_users#new

--- a/app/views/neopets_users/new.html.haml
+++ b/app/views/neopets_users/new.html.haml
@@ -1,17 +1,11 @@
-- title 'Import from pets'
+- title t('.title')
 - secondary_nav do
-  = link_to 'Back to Your Items', user_closet_hangers_path(current_user), :class => 'button'
+  = link_to t('.your_items_link'), user_closet_hangers_path(current_user), :class => 'button'
 
 = form_for @neopets_user, :html => {:id => 'neopets-user-form'} do |f|
-  %p
-    Since the items your pets are wearing don't show up in the Neopets closet,
-    we have this tool to help you import those items without a second thought.
+  %p= t '.explanation'
 
-  %p
-    Just enter your Neopets username in the box below, then we'll load all
-    your pets and import what they're wearing. Have fun!
-
-  = f.label :username, 'Neopets Username'
+  = f.label :username, t('.username_label')
   = f.text_field :username
-  = f.submit "Import pets"
+  = f.submit t('.submit')
 
