--- a/app/views/closet_hangers/_closet_hanger.html.haml
+++ b/app/views/closet_hangers/_closet_hanger.html.haml
@@ -8,11 +8,11 @@
         = return_to_field_tag
         = f.hidden_field :list_id
         = f.hidden_field :owned
-        = f.number_field :quantity, :min => 0, :required => true, :title => "You own #{pluralize closet_hanger.quantity, closet_hanger.item.name}"
-        = f.submit "Save"
+        = f.number_field :quantity, :min => 0, :required => true
+        = f.submit t('.submit')
   - if show_controls
     = form_tag [current_user, closet_hanger], :method => :delete, :class => 'closet-hanger-destroy' do
       = return_to_field_tag
       = hidden_field_tag 'closet_hanger[owned]', closet_hanger.owned
-      = submit_tag "Remove"
+      = submit_tag t('.delete')
 
