--- a/app/views/closet_hangers/petpage.html.haml
+++ b/app/views/closet_hangers/petpage.html.haml
@@ -1,25 +1,18 @@
-- title 'Export to petpage'
+- title t('.title')
 - secondary_nav do
-  = link_to 'Back to Your Items', user_closet_hangers_path(current_user), :class => 'button'
+  = link_to t('.your_items_link'), user_closet_hangers_path(current_user), :class => 'button'
 
 #intro
-  %p
-    We took your public lists and created a nice, simple HTML file for your
-    Neopet's petpage. By default it's styled as a table, but it doesn't have to
-    be. The HTML is flexible, so, if you're the artsy type, you're free to mess
-    with the styles all you want!
-
-  %p
-    Copy the HTML from the box below, then paste it into
-    = succeed '.' do
-      = link_to "your pet's page", 'http://www.neopets.com/edithomepage.phtml'
-    Then head to the Neoboards to show off! Have fun!
+  %p= t '.description'
+  %p= t '.instructions_html',
+        :edit_petpage_link => link_to(t('.instructions_edit_petpage_link_content'),
+                                     'http://www.neopets.com/edithomepage.phtml')
 
 = form_tag petpage_user_closet_hangers_path(@user), :method => :get, :id => 'petpage-closet-lists' do
   = hidden_field_tag 'filter', '1'
   - @closet_lists_by_owned.each do |owned, closet_lists|
     %div
-      %h4 Items you #{closet_list_verb(owned)}
+      %h4= closet_lists_group_name(:you, owned)
       %ul
         - closet_lists.each do |closet_list|
           %li
@@ -29,8 +22,8 @@
         %li.unlisted
           = label_tag do
             = check_box_tag "groups[#{owned}]", '1', petpage_group_checked(owned)
-            Not in a list
-  = submit_tag 'Export checked lists to petpage'
+            = t 'closet_lists.unlisted_name'
+  = submit_tag t('.submit')
 
 %textarea#petpage-output
   = '' + render('petpage_content',
