--- a/app/views/closet_hangers/index.html.haml
+++ b/app/views/closet_hangers/index.html.haml
@@ -73,11 +73,29 @@
                 = render_unlisted_closet_hangers(owned)
                 %span.empty-list= t '.unlisted.empty'
 
+- localized_cache :action_suffix => 'autocomplete_tmpls' do
+  %script#autocomplete-item-tmpl{:type => 'text/x-jquery-tmpl'}
+    %a
+      = t '.autocomplete.add_item_html', :item_name => '${item_name}'
+
+  %script#autocomplete-add-to-list-tmpl{:type => 'text/x-jquery-tmpl'}
+    %a
+      = t '.autocomplete.add_to_list_html', :list_name => '${list_name}'
+
+  %script#autocomplete-add-to-group-tmpl{:type => 'text/x-jquery-tmpl'}
+    %a
+      = t '.autocomplete.add_to_group_html', :group_name => '${group_name}'
+
+  %script#autocomplete-already-in-collection-tmpl{:type => 'text/x-jquery-tmpl'}
+    %span
+      = t '.autocomplete.already_in_collection_html',
+          :collection_name => '${collection_name}'
+
 - content_for :stylesheets do
   = stylesheet_link_tag 'south-street/jquery-ui'
 
 - content_for :javascripts do
-  = include_javascript_libraries :jquery
+  = include_javascript_libraries :jquery, :jquery_tmpl
   = javascript_include_tag 'ajax_auth', 'jquery.ui', 'jquery.jgrowl',
     'placeholder', 'closet_hangers/index'
 
