--- a/app/views/outfits/edit.html.haml
+++ b/app/views/outfits/edit.html.haml
@@ -115,12 +115,20 @@
       %div
         %dt= search_query_with_helper '.search.examples.type'
         %dd= search_query_description '.search.examples.type'
-    #preview-search-form-loading= '.search.loading'
+    #preview-search-form-loading= t '.search.loading'
     #preview-search-form-error.possible-error
     #preview-search-form-no-results
       = t '.search.no_results_html', :query => content_tag(:span)
     %ul
   #no-assets-full-message= t '.sidebar.closet.no_data.description'
+  %script#sharing-html-image-template{:type => 'text/x-jquery-tmpl'}
+    = link_to image_tag('${image_url}'), '${permalink}'
+  %script#sharing-html-text-template{:type => 'text/x-jquery-tmpl'}
+    = link_to t('app_name'), '${permalink}'
+  %script#sharing-bbcode-image-template{:type => 'text/x-jquery-tmpl'}
+    [URL=${permalink}][IMG]${image_url}[/IMG][/URL]
+  %script#sharing-bbcode-text-template{:type => 'text/x-jquery-tmpl'}
+    [URL=${permalink}]#{t('app_name')}[/URL]
   %script#outfit-template{:type => 'text/x-jquery-tmpl'}
     <li class="outfit-${id}{{if starred}} starred{{/if}}">
     %header
