i18n for outfits/edit.js userbar message and outfit save errors

--- a/app/stylesheets/outfits/_edit.sass
+++ b/app/stylesheets/outfits/_edit.sass
@@ -737,7 +737,7 @@ body.outfits-edit
   #save-error, #outfit-not-found
     +error
 
-  #userbar-message
+  #userbar-session-message
     +opacity(.5)
     display: none
 
